[package]
name = "wallet_balance_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = "0.10"
bitcoin = "0.30.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
anyhow = "1.0"
parking_lot = "0.12"